[project]
name = "vkus_grab_ext"
version = "0.1.0"
description = "Local extension for IsaacLab "
authors = [{name="Evgenii Dushkin @ TechVill"}]
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "torch",
    "gymnasium",
    "dill",
]

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vkus_grab_ext"]

[tool.setuptools.package-data]
vkus_grab_ext = ["conf/**/*"]


